<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#D2E2E2E2"
    tools:context=".controlleur.NeighbourDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"  >

        <ImageView
            android:id="@+id/neighbour_avatar_img"
            android:layout_width="match_parent"
            android:layout_height="550dp" />

        <ImageButton
            android:id="@+id/back_button_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/neighbour_name_in_avatar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:layout_marginStart="10dp"
            android:gravity="bottom"
            android:text="@string/coraline"
            android:textSize="50sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="515dp"
            android:layout_marginStart="500dp"
            app:fabSize="normal"
            app:fabCustomSize="100dp"
            android:backgroundTint="white"
            android:src="@drawable/star_icon"/>

        <android.support.v7.widget.CardView
            android:id="@+id/neighbour_infos_cardv"
            android:layout_width="580dp"
            android:layout_height="320dp"
            android:layout_marginTop="580dp"
            android:layout_marginStart="23dp" >

                <TextView
                    android:id="@+id/neighbour_name_in_cardv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:text="@string/coraline" />

                <ImageView
                    android:id="@+id/location_icon_imgv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/location_icon" />
                <TextView
                    android:id="@+id/neighbour_adresse_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginStart="70dp"
                    android:textSize="20sp"
                    android:text="@string/saint_pierre_du_mot_5km" />

                <ImageView
                    android:id="@+id/phone_icon_imgv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="170dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/call_icon" />
                <TextView
                    android:id="@+id/phone_number_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="170dp"
                    android:layout_marginStart="70dp"
                    android:textSize="20sp"
                    android:text="@string/_33_6_86_57_90_14" />

                <ImageView
                    android:id="@+id/neighbour_web_icon_imgv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/web_icon" />
                <TextView
                    android:id="@+id/neighbour_web_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="250dp"
                    android:layout_marginStart="70dp"
                    android:textSize="20sp"
                    android:text="@string/www_facebook_fr_caroline" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/neighbour_about_infos_cardv"
            android:layout_width="580dp"
            android:layout_height="200dp"
            android:layout_marginTop="920dp"
            android:layout_marginStart="23dp">

            <TextView
                android:id="@+id/info_about_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textSize="38sp"
                android:textStyle="bold"
                android:text="@string/a_propos_de_moi" />

            <TextView
                android:id="@+id/about_details_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/bonjour_je_souhaiterais_faire_de_la_marche_nordique"


        </android.support.v7.widget.CardView>

    </RelativeLayout>
        


</LinearLayout>